--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
+    "firebase": "^6.6.2",
     "mini-css-extract-plugin": "^0.8.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
@@ -36,6 +37,8 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
+    "redux-mock-store": "1.2.3",
+    "redux-thunk": "2.2.0",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
     "uuid": "^3.3.3",
