--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "firebase": "^6.6.2",
+    "history": "4.7.2",
     "mini-css-extract-plugin": "^0.8.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
